# uni_projects

./: README.md
AI_SS22/Project2/: README.md
ArtificialIntelligence _SS22/Project1/: README.md
ArtificialIntelligence _SS22/Project3/: README.md
ArtificialIntelligence _SS22/Project4/: README.md
BigDataEngineering_SS22/Project1/: NSA.ipynb  README.md
BigDataEngineering_SS22/Project2/: NSA.ipynb
HandsOnDependability_WS2324/Project1/: Cargo.toml  README.md
HandsOnDependability_WS2324/Project1/maps/: basic.txt  buoys.txt  first_visited.txt  great_pacific_garbage_patch.txt  lonely_buoy.txt
HandsOnDependability_WS2324/Project1/proptest-regressions/: main.txt
HandsOnDependability_WS2324/Project1/src/: analysis.rs  error.rs  lib.rs  main.rs  map.rs  markov.rs  navigation.rs  tui.rs
HandsOnDependability_WS2324/Project1/tests/: P01b_markocean_Updated_Tests.rs  add_first_cell.rs  cli.rs  i1.rs  i2.rs  i3.rs  markov_tests.rs
HandsOnDependability_WS2324/Project2/: .gitignore  Cargo.toml  README.md
HandsOnDependability_WS2324/Project2/src/clearcomm/: Cargo.toml
HandsOnDependability_WS2324/Project2/src/clearcomm/src/: analytics.rs  channel.rs  lib.rs  pipeline.rs
HandsOnDependability_WS2324/Project3/: Cargo.toml  README.md
Programming1_SS21/: README.md
Programming2_SS21/Project1/: README.md  build_testbox  run_tests  testing.py
Programming2_SS21/Project2/: Makefile  README.md
Programming2_SS21/Project3/: Makefile  README.md  install_cpptools.sh  pagerank
Programming2_SS21/Project4/: README.md
Programming2_SS21/Project5/: README.md  campus.osm.nae  (+1 more)
(+633 files in other folders)
